--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="card__title--description">
-                        <p>Tôi Là Một Developer and Tricker </p>
+                        <p>Tôi Là Một Developer  </p>
                     </div>
                 </div>
                 <div class="card__body mt-10">
