--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="card__title--description">
-                        <p>𝐇𝐨̂̃ 𝐓𝐫𝐨̛̣ 𝐓𝐮̛𝐨̛𝐧𝐠 𝐓𝐚́𝐜 𝐌𝐗𝐇 𝐂𝐨𝐧𝐭𝐚𝐜𝐭 𝟎𝟖𝟔𝟕𝟗𝟖𝟐𝟎𝟑𝟑 </p>
+                        <p>𝐇𝐨̂̃ 𝐓𝐫𝐨̛̣ 𝐓𝐮̛𝐨̛𝐧𝐠 𝐓𝐚́𝐜 𝐌𝐗𝐇  </p>
                     </div>
                 </div>
                 <div class="card__body mt-10">
