--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                         </div>
                     </div>
                     <div class="card__title--description">
-                        <p>𝐇𝐨̂̃ 𝐓𝐫𝐨̛̣ 𝐓𝐮̛𝐨̛𝐧𝐠 𝐓𝐚́𝐜 𝐌𝐗𝐇  📌𝐌𝐁𝐁𝐚𝐧𝐤💸𝟒𝟓𝟔𝟏𝟗𝟎𝟖𝟐𝟔𝟗𝟗𝟗𝟗📌
-</p>
+                        <p> 𝐇𝐨̂̃ 𝐓𝐫𝐨̛̣ 𝐓𝐮̛𝐨̛𝐧𝐠 𝐓𝐚́𝐜 𝐌𝐗𝐇  </p>
+                            <p>📌MBBank 4561908269999📌</p>
                     </div>
                 </div>
                 <div class="card__body mt-10">
