--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </div>
                         <div class="col col-lg-3 mt-10">
                             <div class="card__item">
-                                <a href="https://www.youtube.com/" target="_blank" class="card__link">
+                                <a href="https://www.youtube.com/channel/UCNupphEs1_nd3DT_QSO7Aqg" target="_blank" class="card__link">
                                     <div class="link__icon">
                                         <i class="fab fa-youtube" style="color: red;"></i>
                                     </div>
