--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                         </div>
                     </div>
                     <div class="card__title--description">
-                        <p> 𝐇𝐨̂̃ 𝐓𝐫𝐨̛̣ 𝐓𝐮̛𝐨̛𝐧𝐠 𝐓𝐚́𝐜 𝐌𝐗𝐇  </p>
-                            <p>📌MBBank 4561908269999📌</p>
+                        <p> 𝐇𝐨̂̃ 𝐓𝐫𝐨̛̣ 𝐓𝐮̛𝐨̛𝐧𝐠 𝐓𝐚́𝐜 𝐌𝐗𝐇 (Support MXH)  </p>
+                     
                     </div>
                 </div>
                 <div class="card__body mt-10">
@@ -73,7 +73,7 @@
                         </div>
                         <div class="col col-lg-3 mt-10">
                             <div class="card__item">
-                                <a href="https://www.youtube.com/channel/UCNupphEs1_nd3DT_QSO7Aqg" target="_blank" class="card__link">
+                                <a href="https://www.youtube.com/channel/UCpqzn0hZeYQzO4MJF4iUX7g" target="_blank" class="card__link">
                                     <div class="link__icon">
                                         <i class="fab fa-youtube" style="color: red;"></i>
                                     </div>
@@ -91,7 +91,7 @@
                         </div>
                         <div class="col col-lg-3 mt-10">
                             <div class="card__item">
-                                <a href="mailto:dvmxh.hovinh@gmail.com" class="card__link">
+                                <a href="mailto:dvmxh.hovinh.media@gmail.com" class="card__link">
                                     <div class="link__icon">
                                         <i class="fab fa-google" style="color: red;"></i>
                                     </div>
