--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="card__title--description">
-                        <p> 𝐃𝐢̣𝐜𝐡 𝐕𝐮̣ 𝐅𝐚𝐜𝐞𝐛𝐨𝐨𝐤 - 𝐓𝐢𝐤𝐓𝐨𝐤 - 𝐈𝐧𝐬𝐭𝐚𝐠𝐫𝐚𝐦 - 𝐘𝐨𝐮𝐭𝐮𝐛𝐞  </p>
+                        <p> MBBank💸4561908269999  </p>
                      
                     </div>
                 </div>
